@@ -59,7 +59,6 @@ sub usersContainer
     my ($self) = @_;
     my $dc = $self->defaultContainer()->dn();
     my $usersDN = "CN=Users," . $dc;
-    EBox::debug("USERS DN " . $usersDN . ' CONTAINER DN ' . $self->dn());
     return $self->dn() eq $usersDN;
 }
 
